# libakrypt-generator

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Readme.md  libakrypt-base.rc.in  libakrypt.conf  libakrypt.rc.in  libakrypt.test.sh
aktool/: aktool.1  aktool.c  aktool.h  aktool.po  aktool_asn1.c  aktool_icode.c  aktool_icode_config.c  aktool_icode_evaluate.c  aktool_icode_export_import.c  aktool_key.c  aktool_test.c  icode.conf
cmake/: DetectFlags.cmake  DetectHeaders.cmake  DetectLibraries.cmake  MakeAktool.cmake  MakeDoc.cmake
doc/: 10-annotation.rst  20-install-guide.rst  30-faq.rst  31-introduction.rst  39-base.rst  90-aktool.rst  99-bibliography.rst  Doxyfile.akrypt.in  aktool.rst  annotation.rst  bibliography.rst  conf.py  conf.py.in  encrypt.rst  faq.rst  index.rst  install-guide.rst  libakrypt-base.rst  libakrypt-header.tex.in  random.rst  simpleprogs.rst
examples/akbase/: example-file-seek.c  example-htable.c  example-ini-file.c  example-ini.c
examples/faq/: example-g02n02.c  example-g02n03.c  example-g02n04.c  example-g02n05.c  example-g02n06.c  example-g03n01.c  example-g03n03.c  example-g03n04.c  example-g04n01.c  example-g04n03.c  example-g05n01.c  example-g05n02.c  example-g05n03.c  example-g05n04.c  example-g05n05.c  example-g06n01.c
examples/tests/: test-asn1-keys.c  test-cmac01.c  test-hash01.c  test-hash02.c  test-kuznechik01.c  test-mac-offset.c  test-mpzn-password.c  test-sign01.c  test-sign02.c
source/: ak_asn1.c  ak_asn1_cert.c  ak_asn1_keys.c  ak_bckey.c  ak_buffer.c  ak_cmac.c  ak_crc.c  ak_curves.c  ak_encrypt.c  ak_file.c  ak_hash.c  ak_hmac.c  ak_htable.c  ak_ini.c  ak_kdf.c  ak_kuznechik.c  ak_libakrypt.c  ak_list.c  ak_mac.c  ak_mgm.c  ak_mpzn.c  ak_oid.c  ak_options.c  ak_parameters.c  ak_random.c  ak_sign.c  ak_tools.c  ak_xtsmac.c  libakrypt-base.h.in  libakrypt-internal.h  libakrypt.h
